GenShen: Control thread may (still) ignore requests to start concurrent GC

XMLWordPrintable

    • gc

      A race condition exists in which the control thread may clear the `_requested_gc_cause` immediately after a mutator requests an explicit gc. When this happens, the control thread will no longer accept requests from the regulator to start concurrent GC cycles. The mutator thread will never wakeup, eventually the application will run out of memory or no progress will be made.

            Assignee:
            William Kemper
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: