8323630: GenShen: Control thread may (still) ignore requests to start concurrent GC

Reviewed-by: ysr, kdnilsen